buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
        classpath 'org.kordamp.gradle:jdeps-gradle-plugin:0.3.0'
    }
}

apply plugin: 'com.github.ben-manes.versions'
//apply plugin: 'org.kordamp.jdeps'
apply plugin: 'java'
apply plugin: 'idea'

repositories {
    jcenter()
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.2'

    compile 'com.google.code.gson:gson:2.8.5'
    compile 'com.squareup.moshi:moshi:1.7.0'
    compile 'io.reactivex.rxjava2:rxjava:2.2.2'
    compile 'io.vavr:vavr:0.9.2'

    testCompile 'junit:junit:4.12'
    testCompile 'org.assertj:assertj-core:3.11.1'
    testCompile 'org.mockito:mockito-core:2.22.0'
    testCompile 'pl.pragmatists:JUnitParams:1.1.1'
    testImplementation 'com.squareup.okhttp3:mockwebserver:3.11.0'
    testCompile 'net.bytebuddy:byte-buddy:1.8.22'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.1.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
}

task copyRuntimeLibs(type: Copy) {
    into "libs"
    from configurations.testRuntime - configurations.runtime
}

tasks.withType(JavaCompile) {
    //options.compilerArgs += [ '-Xep:DeadException:WARN', '-Xep:GuardedByValidator:OFF' ]
}

sourceCompatibility = '11'
targetCompatibility = '11'

test {
    useJUnitPlatform()
}
